Kubernetes/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookreview
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bookreview
  name: bookreview
  namespace: bookreview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookreview
  template:
    metadata:
      labels:
        app: bookreview
    spec:
      containers:
      - image: ghcr.io/mochizuki875/bookreview:v1.0
        name: bookreview
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookreview
  name: bookreview
  namespace: bookreview
spec:
  selector:
    app: bookreview
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookreview-ingress
  namespace: bookreview
spec:
  ingressClassName: nginx
  rules:
  - host: bookreview.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookreview
            port:
              number: 8080
